--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,9 @@
-# Deploy TrendRadar reports to GitHub Pages
-name: Deploy TrendRadar to Pages
+name: Deploy TrendRadar to GitHub Pages
 
 on:
-  push:
-    branches: ["master"]
   workflow_dispatch:
+  push:
+    branches: ["master"]   # 你的默认分支是 master 就保留这个
 
 permissions:
   contents: read
@@ -16,25 +15,40 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # 这一步就是生成你刚才贴的 index.html
+      - name: Run TrendRadar crawler
+        run: |
+          python main.py
+
+      # 把生成好的静态网页上传给 Pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # TrendRadar 的 HTML 输出在 output/report/
-          # 如果你的 index.html 在 output/ 里，就改成 path: ./output
-          path: ./output/report
+          path: output/report   # 关键：TrendRadar 的网页就在这里
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
